<resources>
    <string name="app_name">RUBICON Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_item_search">Search</string>
    <string name="movies">MOVIES</string>
    <string name="tv_shows">TV SHOWS</string>
    <string name="loading">Loading....</string>
    <string name="string_image_desc">Image</string>
    <string name="refresh_button">Refresh</string>
    <string name="no_internet_text">No internet connection. Connect to the internet and try again.</string>
    <string name="no_internet_title">No network connection</string>
    <string name="search">Search</string>
    <string name="movie">Movie</string>
    <string name="serie">TV Show</string>
</resources>